--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quanxiaoxiao/store",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "type": "module",
   "scripts": {
     "lint": "tsc",
@@ -15,23 +15,15 @@
     "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.23.3",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
-    "@babel/plugin-syntax-import-attributes": "^7.23.3",
-    "@types/node": "^20.11.5",
-    "eslint": "^8.56.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "typescript": "^5.3.3"
+    "@eslint/js": "^9.3.0",
+    "eslint": "^9.3.0",
+    "globals": "^15.3.0"
   },
   "engines": {
     "node": ">= 20.0.0"
   },
   "dependencies": {
+    "@quanxiaoxiao/utils": "^0.11.0",
     "ajv": "^8.12.0",
     "lodash": "^4.17.21",
     "redux": "^5.0.1"
