--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quanxiaoxiao/store",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "type": "module",
   "scripts": {
     "lint": "tsc",
@@ -23,6 +23,7 @@
     "node": ">= 20.0.0"
   },
   "dependencies": {
+    "@quanxiaoxiao/utils": "^0.11.0",
     "ajv": "^8.12.0",
     "lodash": "^4.17.21",
     "redux": "^5.0.1"
